UPDATE Aperture screen redesign and second-aperture fixes
- Health reads the first aperture only: unawakened stays mortal, a
  lone second never boosts it (ApertureService.healthRank)
- Lone first aperture keeps its clickable storage entry; fix duplicate
  physique prefix on the body tab
- Per-aperture storage button is the only entry; title rows display
  only; two apertures render side by side (left first, right second)
  with stacked buttons; impact replaces nourish at a full aperture
- New lang key guzhenren.screen.button.storage
- Inspection cleanup: Math.clamp, addFirst, method references,
  removeIf, ChunkSource.hasChunk over deprecated hasChunkAt, drop
  unused hastened and physiques